Rename control to form. They are essentially HTML5 forms so makes sense
Use the "form" name consistently, e.g. Yaks::Resource::Form,
Yaks::Mapper::Form, etc.

HALO still outputs under a "_controls" key.

Mappers that use "control :foo do" to create forms will see a warning.

--- a/yaks-html/lib/yaks/format/template.html
+++ b/yaks-html/lib/yaks/format/template.html
@@ -71,7 +71,7 @@
         <div class="value"></div>
       </div>
 
-      <div class="controls"></div>
+      <div class="forms"></div>
     </div>
 
 
